--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mime-types": "^2.1.35",
+    "mongoose": "^6.7.4",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0"
   },
