--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1272.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mime-types": "^2.1.35",
     "mongoose": "^6.7.4",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "2.10.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
